crates/pera/src/client_ptb/snapshots/pera__client_ptb__lexer__tests__unexpected_dash_dash.snap
---
source: crates/pera/src/client_ptb/lexer.rs
expression: lex(unexpected)
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Lexeme(
            Unexpected,
            "-",
        ),
    },
]
